--- a/Plugin/CMakeLists.txt
+++ b/Plugin/CMakeLists.txt
@@ -16,6 +16,7 @@ add_test(NAME test_Plugin COMMAND test_Plugin)
 
 add_executable(test_Plugin_2 testing/test_Plugin_2.cxx)
 set(PLUGIN_TEST_ENVIRONMENT "LD_LIBRARY_PATH=${CMAKE_CURRENT_BINARY_DIR}")
+message( STATUS "PLUGIN_TEST_ENVIRONMENT='${PLUGIN_TEST_ENVIRONMENT}'")
 target_link_libraries(test_Plugin_2 XY -ldl)
 add_test(NAME test_Plugin_2 COMMAND test_Plugin_2)
 set_property(TEST test_Plugin_2
